// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid-for-await-using-binding-of-of.js [babel] format 1`] = `
"Unexpected token, expected ")" (1:24)
> 1 | for await (using of of of);
    |                        ^
  2 |"
`;

exports[`invalid-for-await-using-binding-of-of.js [flow] format 1`] = `
"Unexpected token \`await\`, expected the token \`(\` (1:5)
> 1 | for await (using of of of);
    |     ^^^^^
  2 |"
`;

exports[`invalid-for-await-using-binding-of-of.js [typescript] format 1`] = `
"')' expected. (1:24)
> 1 | for await (using of of of);
    |                        ^
  2 |"
`;

exports[`invalid-for-using-binding-of-in.js [babel] format 1`] = `
"Unexpected token (1:15)
> 1 | for (using of in []);
    |               ^
  2 |"
`;

exports[`invalid-for-using-binding-of-in.js [flow] format 1`] = `
"Unexpected token \`in\` (1:15)
> 1 | for (using of in []);
    |               ^^
  2 |"
`;

exports[`invalid-for-using-binding-of-in.js [typescript] format 1`] = `
"Expression expected. (1:15)
> 1 | for (using of in []);
    |               ^
  2 |"
`;

exports[`invalid-for-using-binding-of-of.js [babel] format 1`] = `
"Unexpected token, expected ")" (1:18)
> 1 | for (using of of of);
    |                  ^
  2 |"
`;

exports[`invalid-for-using-binding-of-of.js [flow] format 1`] = `
"Unexpected token \`of\`, expected the token \`)\` (1:18)
> 1 | for (using of of of);
    |                  ^^
  2 |"
`;

exports[`invalid-for-using-binding-of-of.js [typescript] format 1`] = `
"')' expected. (1:18)
> 1 | for (using of of of);
    |                  ^
  2 |"
`;

exports[`invalid-using-binding-pattern.js [babel] format 1`] = `
"Unexpected token (2:17)
  1 | {
> 2 |   using { foo } = f();
    |                 ^
  3 |   using [ bar ] = g();
  4 |   for (using { qux } of h());
  5 |   for (using [ quux ] of i());"
`;

exports[`invalid-using-binding-pattern.js [flow] format 1`] = `
"Unexpected token \`{\`, expected the end of an expression statement (\`;\`) (2:9)
  1 | {
> 2 |   using { foo } = f();
    |         ^
  3 |   using [ bar ] = g();
  4 |   for (using { qux } of h());
  5 |   for (using [ quux ] of i());"
`;

exports[`invalid-using-binding-pattern.js [typescript] format 1`] = `
"'using' declarations may not have binding patterns. (2:9)
  1 | {
> 2 |   using { foo } = f();
    |         ^^^^^^^
  3 |   using [ bar ] = g();
  4 |   for (using { qux } of h());
  5 |   for (using [ quux ] of i());"
`;
